# snake

./: pyproject.toml  snake_score.yml
snake/: __init__.py  cmd_line.py  game.py  main.py  score.py  scores.py
tests/: test_0100_tile.py  test_0200_snake.py
