[tool.poetry]
name = "snake"
version = "0.1.0"
description = ""
authors = ["Arnaud Deltour <arnaud.deltour@etu.minesparis.psl.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
snake = "snake.main:snake"